--- a/app/assets/stylesheets/client_sites_show.scss
+++ b/app/assets/stylesheets/client_sites_show.scss
@@ -25,12 +25,12 @@ body{
 }
 
 #home{
-  background-image: url(../../../images/index.jpg);
+  background-image: image-url("client/sites/index.jpg");
   background-size: cover;
   height: 650px;
   margin-top: 50px;
   .lvjing{
-    background-image: url(../../../images/pattern.png);
+    background-image: image-url("client/sites/pattern.png");
     width: 100%;
     height: 100%;
     padding: 80px 0;
@@ -125,7 +125,7 @@ body{
 }
 
 #skill{
-  background: url(../../../images/parallax_skills.jpg);
+  background: image-url("client/sites/parallax_skills.jpg");
   background-size: cover;
   width: 100%;
   .lujing{
@@ -230,7 +230,7 @@ body{
 
 #contact-num{
   height: 600px;
-  background: url(../../../images/parallax_myprojects.jpg);
+  background: image-url("client/sites/parallax_myprojects.jpg");
   background-size: cover;
   text-align: center;
   color: #fff;
@@ -310,7 +310,7 @@ body{
       height: 200px;
     }
     .chickensalad{
-      background: url(../../../images/chickensalad.jpg);
+      background: image-url("client/sites/chickensalad.jpg");
       background-size: cover;
       padding: 0;
       color: #fff;
@@ -325,31 +325,31 @@ body{
       }
     }
     .school{
-      background: url(../../../images/school.jpg);
+      background: image-url("client/sites/school.jpg");
       background-size: cover;
     }
     .motorbike{
-      background: url(../../../images/motorbike.jpg);
+      background: image-url("client/sites/motorbike.jpg");
       background-size: cover;
     }
     .hamandeggs{
-      background: url(../../../images/hamandeggs.jpg);
+      background: image-url("client/sites/hamandeggs.jpg");
       background-size: cover;
     }
     .snowboard{
-      background: url(../../../images/snowboard.jpg);
+      background: image-url("client/sites/snowboard.jpg");
       background-size: cover;
     }
     .vadering{
-      background: url(../../../images/vadering.jpg);
+      background: image-url("client/sites/vadering.jpg");
       background-size: cover;
     }
     .malta{
-      background: url(../../../images/malta.jpg);
+      background: image-url("client/sites/malta.jpg");
       background-size: cover;
     }
     .flag{
-      background: url(../../../images/flag.jpg);
+      background: image-url("client/sites/flag.jpg");
       background-size: cover;
     }
 
@@ -357,7 +357,7 @@ body{
 }
 
 #data-about{
-  background: url(../../../images/parallax_facts.jpg);
+  background: image-url("client/sites/parallax_facts.jpg");
   background-size: cover;
   color: #fff;
   .row{
@@ -437,7 +437,7 @@ body{
 }
 
 #phone-number{
-  background: url(../../../images/parallax_phone.jpg);
+  background: image-url("client/sites/parallax_phone.jpg");
   height: 500px;
   .shadow{
     background-color: rgba(14,96,147,0.8);
