1, update image path.

--- a/app/views/client/sites/show.html.erb
+++ b/app/views/client/sites/show.html.erb
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="index.html" class="navbar-brand"><img src="images/ly.png" class="img-responsive" width="20px" /></a>
+      <a href="index.html" class="navbar-brand">
+        <%= image_tag 'client/sites/ly.png', class: "img-responsive", width: "20px" %>
+      </a>
     </div>
 
     <div class="navbar-collapse collapse">
