--- a/app/views/client/sites/show.html.erb
+++ b/app/views/client/sites/show.html.erb
@@ -237,14 +237,14 @@
         </div>
         <div class="col-md-3 wow bounce" data-wow-offset="10">
           <div class="social-box">
-            <%= image_tag "client/sites/google-icon", class: "img-responsive" %>
+            <%= image_tag "client/sites/google-icon.png", class: "img-responsive" %>
           </div>
           <h5>Google Plus</h5>
           <h3>Add to your circles</h3>
         </div>
         <div class="col-md-3 wow rotateIn" data-wow-offset="10">
           <div class="social-box">
-            <%= image_tag "client/sites/youtube-icon", class: "img-responsive" %>
+            <%= image_tag "client/sites/youtube-icon.png", class: "img-responsive" %>
           </div>
           <h5>You Tube</h5>
           <h3>Discover my Channel</h3>
@@ -287,7 +287,7 @@
     <div class="row">
       <div class="col-md-3 chickensalad">
         <div class="content text-center hidden">
-          <%= image_tag "client/sites/gift", class: "img-responsive" %>
+          <%= image_tag "client/sites/gift.png", class: "img-responsive" %>
           <h3>Chicken Salad with Potatoes</h3>
         </div>
       </div>
