--- a/app/views/client/sites/show.html.erb
+++ b/app/views/client/sites/show.html.erb
@@ -472,23 +472,23 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>NAME*</label>
-          <input type="" name="" class="form-control" placeholder="Enter name" />
+          <input type="text" id="name" class="form-control" placeholder="Enter name" />
         </div>
         <div class="form-group">
           <label>EMAIL*</label>
-          <input type="" name="" class="form-control" placeholder="Enter email" />
+          <input type="email" id="email" class="form-control" placeholder="Enter email" />
         </div>
         <div class="form-group">
           <label>PHONE*</label>
-          <input type="" name="" class="form-control" placeholder="Enter phone" />
+          <input type="text" id="phone" class="form-control" placeholder="Enter phone" />
         </div>
       </div>
       <div class="col-md-6">
         <label>MESSAGE*</label>
-        <textarea class="form-control" rows="8"></textarea>
+        <textarea class="form-control" id="message" rows="8"></textarea>
       </div>
       <div class="col-md-12 text-center">
-        <button class="btn btn-primary">SEND MESSAGE</button>
+        <button class="btn btn-primary" id="send-message">SEND MESSAGE</button>
       </div>
     </div>
   </div>
