1, Fixed img to font awesome.

--- a/app/views/client/sites/show.html.erb
+++ b/app/views/client/sites/show.html.erb
@@ -185,28 +185,28 @@
     <div class="row">
       <div class="col-md-3 wow slideInUp" id="ability-code-box" data-wow-offset="10">
         <a href="">
-          <%= image_tag "client/sites/code-default.png", class: 'img-responsive', id: 'code-image' %>
+          <i class="fa fa-code fa-5x" aria-hidden="true"></i>
           <h3>WEB APPLICATIONS</h3>
         </a>
         <p>Starting with very simple web sites till complex internet presences.</p>
       </div>
       <div class="col-md-3 wow zoomIn" data-wow-offset="10">
         <a href="">
-          <%= image_tag "client/sites/software-default.png", class: "img-responsive" %>
+          <i class="fa fa-code-fork fa-5x" aria-hidden="true"></i>
           <h3>SOFTWARE</h3>
         </a>
         <p>No matter whether Java Applications or Mobile Apps. </p>
       </div>
       <div class="col-md-3 wow flipInX" data-wow-offset="10">
         <a href="">
-          <%= image_tag "client/sites/flag-default.png", class: "img-responsive" %>
+          <i class="fa fa-flag fa-5x" aria-hidden="true"></i>
           <h3>GRAPHICS & DESIGN</h3>
         </a>
         <p>Such as creating unique logos, catchy folders or just clear handouts. </p>
       </div>
       <div class="col-md-3 wow bounceInRight">
         <a href="">
-          <%= image_tag "client/sites/flag-default.png", class: "img-responsive" %>
+          <i class="fa fa-youtube-play fa-5x" aria-hidden="true"></i>
           <h3>VIDEO PRODUCTION</h3>
         </a>
         <p>Unfortunately, not much knowledge for professional outcomes.</p>
@@ -223,30 +223,30 @@
       <div class="row">
         <div class="col-md-3 wow fadeInUp" data-wow-offset="10">
           <div class="social-box">
-            <%= image_tag "client/sites/facebook-icon.png", class: "img-responsive" %>
+            <i class="fa fa-qq fa-4x" aria-hidden="true"></i>
           </div>
-          <h5>Facebook</h5>
-          <h3>Let's be friends</h3>
+          <h5>QQ</h5>
+          <h3>Add to your circles</h3>
         </div>
         <div class="col-md-3 wow bounceInDown" data-wow-offset="10">
           <div class="social-box">
-            <%= image_tag "client/sites/twter-icon.png", class: "img-responsive" %>
+            <i class="fa fa-weixin fa-4x" aria-hidden="true"></i>
           </div>
-          <h5>Twitter</h5>
+          <h5>Wechat</h5>
           <h3>Follow my news</h3>
         </div>
         <div class="col-md-3 wow bounce" data-wow-offset="10">
           <div class="social-box">
-            <%= image_tag "client/sites/google-icon.png", class: "img-responsive" %>
+            <i class="fa fa-facebook fa-5x" aria-hidden="true"></i>
           </div>
-          <h5>Google Plus</h5>
-          <h3>Add to your circles</h3>
+          <h5>Facebook</h5>
+          <h3>Let's be friends</h3>
         </div>
         <div class="col-md-3 wow rotateIn" data-wow-offset="10">
           <div class="social-box">
-            <%= image_tag "client/sites/youtube-icon.png", class: "img-responsive" %>
+            <i class="fa fa-github fa-5x" aria-hidden="true"></i>
           </div>
-          <h5>You Tube</h5>
+          <h5>Github</h5>
           <h3>Discover my Channel</h3>
         </div>
       </div>
@@ -287,17 +287,22 @@
     <div class="row">
       <div class="col-md-3 chickensalad">
         <div class="content text-center hidden">
-          <%= image_tag "client/sites/gift.png", class: "img-responsive" %>
-          <h3>Chicken Salad with Potatoes</h3>
+          <span><i class="fa fa-graduation-cap fa-4x" aria-hidden="true"></i></span>
+          <h3>College graduate</h3>
         </div>
       </div>
       <div class="col-md-3 school">
+
       </div>
       <div class="col-md-3 motorbike">
       </div>
       <div class="col-md-3 hamandeggs">
       </div>
       <div class="col-md-3 snowboard">
+        <div class="content text-center hidden">
+          <span><i class="fa fa-bicycle fa-4x" aria-hidden="true"></i></span>
+          <h3>Bicycle travelling</h3>
+        </div>
       </div>
       <div class="col-md-3 vadering">
       </div>
