--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,9 @@
  *
  */
  // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+@import "font-awesome";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "animate.min";
 @import "client_sites_show";
+
