--- a/app/assets/stylesheets/client_sites_show.scss
+++ b/app/assets/stylesheets/client_sites_show.scss
@@ -255,7 +255,7 @@ body{
         height: 100px;
         border-radius: 50%;
         background-color: rgba(255,255,255,0.2);
-        img{
+        i{
           padding-top: 19px;
           margin: 0 auto;
         }
@@ -304,25 +304,24 @@ body{
 
 #picture-show{
   padding: 50px 0;
+  color: #fff;
   .container-fluid{
     height: 400px;
+    i{
+      margin-top: 50px;
+    }
     .col-md-3{
       height: 200px;
+      padding: 0;
+    }
+    .content{
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
     }
     .chickensalad{
       background: image-url("client/sites/chickensalad.jpg");
       background-size: cover;
-      padding: 0;
-      color: #fff;
-      .content{
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0,0,0,0.5);
-        img{
-          margin: 0 auto;
-          padding-top: 50px;
-        }
-      }
     }
     .school{
       background: image-url("client/sites/school.jpg");
