1, Update person message.

--- a/app/views/client/sites/show.html.erb
+++ b/app/views/client/sites/show.html.erb
@@ -96,17 +96,17 @@
         <div class="col-md-4">
           <div id="indicatorContainer1"></div>
           <h1>WEB</h1>
-          <h4>HTML5, CSS3, jQuery, Emberjs</h4>
+          <h4>HTML5, CSS3, jQuery, Bootstrap, Angularjs</h4>
         </div>
         <div class="col-md-4">
           <div id="indicatorContainer2"></div>
-          <h1>DESIGN</h1>
-          <h4>Adobe Photoshop</h4>
+          <h1>CRAWLER</h1>
+          <h4>Python, Scrapy</h4>
         </div>
         <div class="col-md-4">
           <div id="indicatorContainer3"></div>
           <h1>DEVELOP</h1>
-          <h4>Java & Android, SQL, RAILS, GIT</h4>
+          <h4>Java & Android, SQL, RAILS, Django</h4>
         </div>
       </div>
     </div>
