1, Update girl fired.

--- a/app/views/client/sites/show.html.erb
+++ b/app/views/client/sites/show.html.erb
@@ -36,7 +36,7 @@
         <div class="line"></div>
       </div>
       <h1>Andy</h1>
-      <h1 class="green">Moon's</h1>
+      <h1 class="green">Ping's</h1>
       <div class="line-box short-line">
         <div class="line"></div>
       </div>
